cmake_minimum_required(VERSION 3.23)
project(ProjectEuler)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(Problem1)
add_subdirectory(Problem2)
add_subdirectory(Problem3)
add_subdirectory(Problem4)
add_subdirectory(Problem5)
add_subdirectory(Problem6)
add_subdirectory(Problem7)
add_subdirectory(Problem8)
add_subdirectory(Problem9)
add_subdirectory(Problem10)
add_subdirectory(Problem11)
add_subdirectory(Problem12)
add_subdirectory(Problem13)
add_subdirectory(Problem14)
add_subdirectory(Problem15)
add_subdirectory(Problem16)
add_subdirectory(Problem17)
add_subdirectory(Problem18)
add_subdirectory(Problem19)
add_subdirectory(Problem20)
add_subdirectory(Problem21)
add_subdirectory(Problem22)
add_subdirectory(Problem23)
add_subdirectory(Problem24)
add_subdirectory(Problem25)
add_subdirectory(Problem26)
add_subdirectory(Problem27)
add_subdirectory(Problem28)
add_subdirectory(Problem29)
add_subdirectory(Problem67)
add_subdirectory(Problem76)
add_subdirectory(Problem119)
add_subdirectory(Problem205)
add_subdirectory(Problem206)
add_subdirectory(Problem207)
add_subdirectory(Problem290)
add_subdirectory(Problem303)
add_subdirectory(Problem455)