cmake_minimum_required(VERSION 3.23)
project(ProjectEuler)

set(CMAKE_CXX_STANDARD 23)

#set(CMAKE_CXX_FLAGS "-ld64")
set(CMAKE_CXX_FLAGS "-Wl,-ld_classic")

add_subdirectory(BigInt)
add_subdirectory(Problem1)
add_subdirectory(Problem2)
add_subdirectory(Problem3)
add_subdirectory(Problem4)
add_subdirectory(Problem5)
add_subdirectory(Problem6)
add_subdirectory(Problem7)
add_subdirectory(Problem8)
add_subdirectory(Problem9)
add_subdirectory(Problem10)
add_subdirectory(Problem11)
add_subdirectory(Problem12)
add_subdirectory(Problem13)
add_subdirectory(Problem14)
add_subdirectory(Problem15)
add_subdirectory(Problem16)
add_subdirectory(Problem17)
add_subdirectory(Problem18)
add_subdirectory(Problem19)
add_subdirectory(Problem20)
add_subdirectory(Problem21)
add_subdirectory(Problem22)
add_subdirectory(Problem23)
add_subdirectory(Problem24)
add_subdirectory(Problem25)
add_subdirectory(Problem26)
add_subdirectory(Problem27)
add_subdirectory(Problem28)
add_subdirectory(Problem29)
add_subdirectory(Problem30)
add_subdirectory(Problem31)
#add_subdirectory(Problem32)
add_subdirectory(Problem33)
add_subdirectory(Problem34)
add_subdirectory(Problem35)
add_subdirectory(Problem36)
add_subdirectory(Problem37)
add_subdirectory(Problem38)
add_subdirectory(Problem39)
add_subdirectory(Problem40)
add_subdirectory(Problem41)
add_subdirectory(Problem42)
add_subdirectory(Problem43)
add_subdirectory(Problem44)
add_subdirectory(Problem45)
add_subdirectory(Problem46)
add_subdirectory(Problem47)
add_subdirectory(Problem48)
add_subdirectory(Problem49)
add_subdirectory(Problem50)
add_subdirectory(Problem51)
add_subdirectory(Problem52)
add_subdirectory(Problem53)
add_subdirectory(Problem67)
add_subdirectory(Problem76)
add_subdirectory(Problem119)
add_subdirectory(Problem205)
add_subdirectory(Problem206)
add_subdirectory(Problem207)
add_subdirectory(Problem290)
add_subdirectory(Problem303)
#add_subdirectory(Problem455)
add_subdirectory(Problem810)