[package]
name = "ProjectEuler"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "problem58"
path = "Problem58/main.rs"

[[bin]]
name = "problem59"
path = "Problem59/main.rs"

[dependencies]
itertools = "0.12.0"


